# led-matrix

./: .gitignore  ICON_CREATION.md  ICON_EDITOR_ROADMAP.md  ICON_RENDERER_README.md  ICON_SYSTEM_PROPOSAL.md  ICON_SYSTEM_STATUS.md  INTEGRATION.md  LICENSE  README-NIXOS.md  README.md  SCREEN_LOCK_MVP.md  TESTING.md  VERSION.md  build.sh  build_and_install.sh  commands.py  config.yaml  default.nix  demo_hardware_lock.py  drawing.py  example-configuration.nix  find_ports.py  flake.nix  icon_editor.html  icon_manager.py  icon_renderer.py  install_as_service.sh  install_deps.sh  install_service.sh  keyboard2.py  led_mon.spec  led_system_monitor.py  ledmatrixmonitoring.nix  lm-sensors.py  main.py  monitors.py  patterns.py  psutil-sensors.py  pyproject.toml  requirements.txt  (+6 more)
icons/rendered/lock_large/: static.json
icons/rendered/lock_small/: static.json
led_mon/: config-README.md  config.yaml  drawing.py  led_system_monitor.py  patterns.py  shared_state.py
led_mon/equalizer_files/: visualize.py
led_mon/plugins/: equalizer_plugin.py  time_weather_plugin.py
plugins/: temp_fan_plugin.py
snapshot_files/left/: double-check.json  the-way-left.json  the-way-left_raw.json  zigzag.json
snapshot_files/right/: check.json  every-third-row.json  the-way-right.json  the-way-right_raw.json
tests/: module-test-configuration.nix
utils/: weather.py
